[gd_scene load_steps=12 format=2]

[ext_resource path="res://Views/Explore/UI/SubUI/Equipment.gd" type="Script" id=1]
[ext_resource path="res://ReusableUI/VitalsCard/VitalsCard.tscn" type="PackedScene" id=2]
[ext_resource path="res://ReusableUI/TraitCard/TraitCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://ReusableUI/ResistanceCard/Resistance.tscn" type="PackedScene" id=4]
[ext_resource path="res://TextureBank/Interface/paperdoll.jpg" type="Texture" id=5]
[ext_resource path="res://ReusableUI/DragLock/DragLock.tscn" type="PackedScene" id=6]
[ext_resource path="res://TextureBank/Items/Weapons/TerranPistol.jpg" type="Texture" id=7]
[ext_resource path="res://TextureBank/Items/Equipment/TerranFragGrenade.jpg" type="Texture" id=8]
[ext_resource path="res://TextureBank/Items/Frames/TerranLightFrame.jpg" type="Texture" id=9]
[ext_resource path="res://ReusableUI/ItemCard/ItemCard.tscn" type="PackedScene" id=10]
[ext_resource path="res://ReusableUI/ActionCard/ActionCard.tscn" type="PackedScene" id=11]

[node name="Equipment" type="PanelContainer" groups=[
"SubUI",
]]
margin_right = 1000.0
margin_bottom = 800.0
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 1000.0
margin_bottom = 800.0
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="HBox"]
margin_right = 330.0
margin_bottom = 800.0
size_flags_horizontal = 3

[node name="VitalsCard" parent="HBox/Left" instance=ExtResource( 2 )]
margin_top = 0.0
margin_right = 330.0
margin_bottom = 104.0

[node name="TraitCard" parent="HBox/Left" instance=ExtResource( 3 )]
margin_top = 108.0
margin_right = 330.0
margin_bottom = 293.0

[node name="ResistanceCard" parent="HBox/Left" instance=ExtResource( 4 )]
margin_top = 297.0
margin_right = 330.0
margin_bottom = 582.0

[node name="Button" type="Button" parent="HBox/Left"]
margin_top = 586.0
margin_right = 330.0
margin_bottom = 617.0
text = "Remove All Equipment"

[node name="Center" type="VBoxContainer" parent="HBox"]
margin_left = 334.0
margin_right = 664.0
margin_bottom = 800.0
size_flags_horizontal = 3

[node name="Crewman" type="HBoxContainer" parent="HBox/Center"]
margin_right = 330.0
margin_bottom = 31.0

[node name="Prev" type="Button" parent="HBox/Center/Crewman"]
margin_right = 39.0
margin_bottom = 31.0
text = "Prev"

[node name="Name" type="Label" parent="HBox/Center/Crewman"]
margin_left = 43.0
margin_right = 286.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "{CREWMAN NAME}"
align = 1

[node name="Next" type="Button" parent="HBox/Center/Crewman"]
margin_left = 290.0
margin_right = 330.0
margin_bottom = 31.0
text = "Next"

[node name="Panel" type="Panel" parent="HBox/Center"]
margin_top = 35.0
margin_right = 330.0
margin_bottom = 535.0
rect_min_size = Vector2( 0, 500 )
size_flags_stretch_ratio = 2.0

[node name="TextureRect" type="TextureRect" parent="HBox/Center/Panel"]
margin_left = 13.0
margin_top = 18.0
margin_right = 318.0
margin_bottom = 484.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="LWeapon" parent="HBox/Center/Panel" groups=[
"WeaponDragLock",
] instance=ExtResource( 6 )]
margin_left = 2.0
margin_top = 5.0
margin_right = 142.0
margin_bottom = 105.0
holdsClass = "Weapon"
isClass = "Crew"
textureSize = Vector2( 128, 64 )
lockSize = Vector2( 140, 85 )
displayName = "Weapon"
firesEvent = "WeaponAssigned"
lockName = "LWeapon"
defaultTexture = ExtResource( 7 )

[node name="RWeapon" parent="HBox/Center/Panel" groups=[
"WeaponDragLock",
] instance=ExtResource( 6 )]
margin_left = 200.0
margin_top = 5.0
margin_right = 328.0
margin_bottom = 105.0
holdsClass = "Weapon"
isClass = "Crew"
textureSize = Vector2( 64, 64 )
lockSize = Vector2( 128, 64 )
displayName = "Weapon"
firesEvent = "WeaponAssigned"
lockName = "RWeapon"
defaultTexture = ExtResource( 7 )

[node name="REquip" parent="HBox/Center/Panel" groups=[
"EquipDragLock",
] instance=ExtResource( 6 )]
margin_left = 206.0
margin_top = 315.0
margin_right = 281.0
margin_bottom = 415.0
rect_rotation = -27.6744
holdsClass = "Equipment"
isClass = "Crew"
textureSize = Vector2( 64, 64 )
displayName = "Equip."
firesEvent = "EquipmentAssigned"
lockName = "REquip"
defaultTexture = ExtResource( 8 )

[node name="CEquip" parent="HBox/Center/Panel" groups=[
"EquipDragLock",
] instance=ExtResource( 6 )]
margin_left = 126.0
margin_top = 345.0
margin_right = 201.0
margin_bottom = 445.0
holdsClass = "Equipment"
isClass = "Crew"
textureSize = Vector2( 64, 64 )
displayName = "Equip."
firesEvent = "EquipmentAssigned"
lockName = "CEquip"
defaultTexture = ExtResource( 8 )

[node name="LEquip" parent="HBox/Center/Panel" groups=[
"EquipDragLock",
] instance=ExtResource( 6 )]
margin_left = 46.0
margin_top = 285.0
margin_right = 121.0
margin_bottom = 385.0
rect_rotation = 20.4507
holdsClass = "Equipment"
isClass = "Crew"
textureSize = Vector2( 64, 64 )
displayName = "Equip."
firesEvent = "EquipmentAssigned"
lockName = "LEquip"
defaultTexture = ExtResource( 8 )

[node name="Frame" parent="HBox/Center/Panel" groups=[
"FrameDragLock",
] instance=ExtResource( 6 )]
margin_left = 126.0
margin_top = 165.0
margin_right = 201.0
margin_bottom = 325.0
holdsClass = "Frame"
isClass = "Crew"
textureSize = Vector2( 128, 64 )
lockSize = Vector2( 75, 160 )
displayName = "Frame"
firesEvent = "FrameAssigned"
lockName = "Frame"
defaultTexture = ExtResource( 9 )

[node name="ItemCard" parent="HBox/Center" instance=ExtResource( 10 )]
visible = false
margin_top = 539.0
margin_right = 330.0
margin_bottom = 799.0

[node name="ActionCard" parent="HBox/Center" instance=ExtResource( 11 )]
visible = false
margin_top = 803.0
margin_right = 330.0
margin_bottom = 834.0
size_flags_vertical = 3

[node name="Right" type="VBoxContainer" parent="HBox"]
margin_left = 668.0
margin_right = 1000.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Armory" type="Label" parent="HBox/Right"]
margin_right = 332.0
margin_bottom = 31.0
text = "Armory"
align = 1
valign = 1

[node name="Weapon" type="Button" parent="HBox/Right"]
margin_top = 35.0
margin_right = 332.0
margin_bottom = 66.0
text = "Weapons"

[node name="WeaponGrid" type="ItemList" parent="HBox/Right"]
margin_top = 70.0
margin_right = 332.0
margin_bottom = 287.0
size_flags_vertical = 3
allow_reselect = true
max_columns = 2
same_column_width = true
fixed_column_width = 140
icon_mode = 0
fixed_icon_size = Vector2( 128, 64 )

[node name="Frames" type="Button" parent="HBox/Right"]
margin_top = 291.0
margin_right = 332.0
margin_bottom = 322.0
text = "Frames"

[node name="FrameGrid" type="ItemList" parent="HBox/Right"]
margin_top = 326.0
margin_right = 332.0
margin_bottom = 543.0
size_flags_vertical = 3
allow_reselect = true
max_columns = 4
same_column_width = true
fixed_column_width = 70
icon_mode = 0
fixed_icon_size = Vector2( 64, 128 )

[node name="Equipment" type="Button" parent="HBox/Right"]
margin_top = 547.0
margin_right = 332.0
margin_bottom = 578.0
text = "Equipment"

[node name="EquipmentGrid" type="ItemList" parent="HBox/Right"]
margin_top = 582.0
margin_right = 332.0
margin_bottom = 800.0
size_flags_vertical = 3
allow_reselect = true
max_columns = 4
same_column_width = true
fixed_column_width = 70
icon_mode = 0
fixed_icon_size = Vector2( 64, 64 )
[connection signal="pressed" from="HBox/Center/Crewman/Prev" to="." method="_onPrevPressed"]
[connection signal="pressed" from="HBox/Center/Crewman/Next" to="." method="_onNextPressed"]
[connection signal="gui_input" from="HBox/Right/WeaponGrid" to="." method="_onWeaponGridGuiInput"]
[connection signal="gui_input" from="HBox/Right/FrameGrid" to="." method="_onFrameGridGuiInput"]
[connection signal="gui_input" from="HBox/Right/EquipmentGrid" to="." method="_onEquipmentGridGuiInput"]
